update source using error handling express-session express-handlebars-sections

--- a/views/_layouts/layout.hbs
+++ b/views/_layouts/layout.hbs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Templates</title>
     {{> css}}
+    {{{_sections.css}}}
 </head>
 
 <body>
@@ -22,6 +23,7 @@
     </footer>
 
     {{> script}}
+    {{{_sections.js}}}
 </body>
 
 </html>
